--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
     "email": "mizanur.r.ashiq@gmail.com"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "zod": "^3.21.4"
   }
 }
